crates/runa/src/snapshots/runa__tui__tests__frame_with_collapsed_reasoning.snap
---
source: crates/runa/src/tui.rs
expression: "render(&sample(), 80, 24)"
---
you> what is GGUF?
(reasoning hidden: 3 lines — Ctrl+R to show)
runa> a single-file container for tensors.
(i) (context cleared)
















┌ input (Enter send · Shift+Enter newline) ────────────────────────────────────┐
│> draft follow-up                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
 qwen3-8b · cpu · 42.5 tok/s · ctx 12% (1024/8192) · Ctrl+R reasoning · /help
