crates/runa/src/snapshots/runa__tui__tests__frame_with_expanded_reasoning.snap
---
source: crates/runa/src/tui.rs
expression: "render(&tui, 80, 24)"
---
you> what is GGUF?
think| line one
       line two
       line three
runa> a single-file container for tensors.
(i) (context cleared)














┌ input (Enter send · Shift+Enter newline) ────────────────────────────────────┐
│> draft follow-up                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
 qwen3-8b · cpu · 42.5 tok/s · ctx 12% (1024/8192) · Ctrl+R reasoning · /help
